// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"external \\\\\\"fs\\\\\\"\\": 582,
      \\"external \\\\\\"path\\\\\\"\\": 476,
      \\"ignored pkgs/somepackage/foo\\": 940,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      316,
      476,
      582,
      940
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"dependencies sync /^\\\\\\\\.\\\\\\\\/.*$/\\": 750,
      \\"dependencies/bar.js\\": 853,
      \\"dependencies/foo.js\\": 494,
      \\"external \\\\\\"fs\\\\\\"\\": 582,
      \\"external \\\\\\"path\\\\\\"\\": 476,
      \\"test.js\\": 316
    },
    \\"usedIds\\": [
      316,
      476,
      494,
      582,
      750,
      853
    ]
  }
}"
`;
